--- a/index.html
+++ b/index.html
@@ -1,31 +1,4 @@
-[21:42, 13/9/2025] Møredoōr: <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-  </head>
-  <body>
-    <a-scene mindar-image="imageTargetSrc: ./targets.mind; maxTrack: 2" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-      <a-assets>
-        <a-asset-item id="WhaleO3" src="./WhaleO1.glb"></a-asset-item>
-        <a-asset-item id="OctupusO3" src="./Octop…
-[23:26, 13/9/2025] Møredoōr: -o-oo-o-o--o-o-o-o-o-o-o-o--o-o-o---o-o-o
-[23:26, 13/9/2025] Møredoōr: <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-  </head>
-  <body>
-    <a-scene mindar-image="imageTargetSrc: ./targets.mind; maxTrack: 2" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-      <a-assets>
-        <a-asset-item id="WhaleO3" src="./WhaleO1.glb"></a-asset-item>
-        <a-asset-item id="OctupusO3" src="./Octop…
-[23:33, 13/9/2025] Møredoōr: Manejo de eventos prueba: https://hiukim.github.io/mind-ar-js-doc/samples/events.html
-[18:59, 14/9/2025] Møredoōr: -o-o-o-o--o-o-o-o-o-o--o-o-o
-[18:59, 14/9/2025] Møredoōr: <html>
+<html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
@@ -238,7 +211,7 @@
 
       // -------- NUEVO: Rotación de imágenes en el mensaje --------
       const scanImage = document.querySelector("#scan-image");
-      const scanImages = ["./Ballena3.png", "./OctupusO3.png"]; // tus 2 imágenes de target
+      const scanImages = ["./target1.png", "./target2.png"]; // tus 2 imágenes de target
       let scanIndex = 0;
 
       setInterval(() => {
@@ -248,3 +221,4 @@
     </script>
   </body>
 </html>
+
