--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
       // -------- NUEVO: Rotación de imágenes en el mensaje --------
       const scanImage = document.querySelector("#scan-image");
-      const scanImages = ["./target1.png", "./target2.png"]; // tus 2 imágenes de target
+      const scanImages = ["./Ballena3.png", "./OctupusO3.png"]; // tus 2 imágenes de target
       let scanIndex = 0;
 
       setInterval(() => {
@@ -221,4 +221,5 @@
     </script>
   </body>
 </html>
+
 
